# renderly

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md
.claude/: launch.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  asset-pack.md  command-api.md  design-system.md  improvement-plan.md  mcp-agent-guide.md  parity-board.md  plugin-api.md  preview-webview.md  project-schema.md  qa-checklist.md
examples/plugins/invert/: invert.rs
examples/registry/: README.md
renderly-app/: index.html  package-lock.json  package.json  vite.harness.config.ts
renderly-app/src/: App.tsx
renderly-app/src-tauri/: Cargo.toml  tauri.conf.json
renderly-app/src-tauri/capabilities/: default.json
renderly-app/src-tauri/icons/: icon.icns
renderly-app/src-tauri/src/: bridge.rs  lib.rs  main.rs  media_assets.rs  playback.rs
renderly-app/src/components/: ContextMenu.tsx  TopBar.tsx  WelcomeScreen.tsx
renderly-app/src/dev/: tauriMock.ts
renderly-app/src/lib/: commands.ts  dragMedia.ts  dragTransition.ts  ipc.ts  maskMath.ts  previewMath.ts  theme.ts  types.ts
renderly-app/src/preview/: WebviewPreview.tsx  webviewPreviewEngine.ts
renderly-app/src/store/: editorStore.ts
renderly-app/src/styles/: globals.css  tokens.css
renderly-app/src/timeline/: interactions.ts  layout.ts  renderer.ts  theme.ts
renderly-cli/: Cargo.toml
renderly-cli/src/: main.rs
renderly-core/: Cargo.toml
renderly-core/examples/: write_gain_wasm.rs  write_invert_wasm.rs
renderly-core/src/: frame.rs  lib.rs  mask.rs  segmentation.rs
renderly-core/src/audio/: mod.rs  tts.rs
renderly-core/src/captions/: mod.rs
renderly-core/src/commands/: mod.rs
renderly-core/src/compose/: chroma.rs  eval.rs  mod.rs
renderly-core/src/compose/effects/: chroma_key.wgsl  lut.wgsl  mask.wgsl  mod.rs  pack_lut.wgsl
renderly-core/src/export/: mod.rs
renderly-core/src/media/: ffmpeg_cli.rs
renderly-core/src/packs/: mod.rs
renderly-core/src/perceive/: mod.rs
renderly-core/src/plugins/: mod.rs
renderly-core/src/project/: anim.rs  mod.rs
renderly-mcp/: Cargo.toml
renderly-mcp/src/: bridge_client.rs  main.rs  server.rs
renderly-wasm/src/: compositor.rs
uppercut-app/: index.html  package-lock.json  package.json  vite.config.ts
uppercut-app/src/: App.tsx  main.ts  main.tsx  styles.css  types.ts  ui.ts
uppercut-app/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
uppercut-app/src-tauri/capabilities/: default.json
uppercut-app/src-tauri/src/: audio_scrub.rs  lib.rs  main.rs  playback.rs
uppercut-app/src/components/: ContextMenu.tsx  Toasts.tsx  TopBar.tsx  WelcomeScreen.tsx
uppercut-app/src/lib/: commands.ts  dragMedia.ts  format.ts  ipc.ts  maskMath.ts  previewMath.ts  projectFlows.ts  types.ts
uppercut-app/src/store/: editorStore.ts
uppercut-app/src/styles/: globals.css  tokens.css
uppercut-app/src/timeline/: interactions.ts  layout.ts  renderer.ts  theme.ts
uppercut-cli/src/: main.rs
uppercut-core/: Cargo.toml
uppercut-core/src/: lib.rs  segmentation.rs
uppercut-core/src/audio/: tts.rs
uppercut-core/src/captions/: mod.rs
uppercut-core/src/commands/: mod.rs
uppercut-core/src/compose/: composite.wgsl  mod.rs
uppercut-core/src/export/: mod.rs
uppercut-core/src/media/: ffmpeg_cli.rs  mod.rs
uppercut-core/src/packs/: mod.rs
uppercut-core/src/perceive/: analysis.rs  mod.rs
uppercut-mcp/: Cargo.toml
uppercut-mcp/src/: main.rs  server.rs
(+55 files in other folders)
