[workspace]
resolver = "2"
members = [
    "renderly-core",
    "renderly-cli",
    "renderly-mcp",
    "renderly-app/src-tauri",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mecharan14/renderly"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

renderly-core = { path = "renderly-core" }
