[package]
name = "renderly-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server exposing renderly-core's command API and perception tools to AI agents. Phase 1 — see PLAN.md §4."

[[bin]]
name = "renderly-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
rmcp = { version = "2.1.0", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1.2.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
renderly-core.workspace = true
uuid.workspace = true
